--- a/maas-cloud.yaml
+++ b/maas-cloud.yaml
@@ -2,4 +2,4 @@ clouds:         # clouds key is required.
   maas-cloud:
     type: maas
     auth-types: [oauth1]
-    endpoint: http://10.128.0.3:5240/MAAS
+    endpoint: http://$IP_ADDRESS:5240/MAAS
