--- a/bundle.yaml
+++ b/bundle.yaml
@@ -29,8 +29,14 @@ machines:
   "5":
     series: focal
     constraints: "arch=amd64 mem=4G cores=4 root-disk=50G"
-# LB + Monitoring + Cert
+# LB + Monitoring + Cert + Ceph Mon & Osd
   "6":
+    series: focal
+    constraints: "arch=amd64 mem=8G cores=8 root-disk=50G"
+  "7":
+    series: focal
+    constraints: "arch=amd64 mem=8G cores=8 root-disk=50G"
+  "8":
     series: focal
     constraints: "arch=amd64 mem=8G cores=8 root-disk=50G"
 
@@ -58,7 +64,7 @@ applications:
     charm: easyrsa
     num_units: 1
     to:
-    - 6
+    - 0
   etcd:
     annotations:
       gui-x: '800'
@@ -79,9 +85,11 @@ applications:
     channel: stable
     charm: kubeapi-load-balancer
     expose: true
-    num_units: 1
+    num_units: 3
     to:
     - 6
+    - 7
+    - 8
   kubernetes-control-plane:
     annotations:
       gui-x: '800'
@@ -109,12 +117,6 @@ applications:
     - 3
     - 4
     - 5
-  keepalived:
-    channel: stable
-    charm: keepalived
-  telegraf:
-    channel: stable
-    charm: telegraf
 
 relations:
 - - kubernetes-control-plane:loadbalancer-external
