--- a/monit/monitoring-pgt-overlay.yaml
+++ b/monit/monitoring-pgt-overlay.yaml
@@ -1,14 +1,20 @@
+machines:
+  "0":
+    series: focal
+    constraints: "arch=amd64 mem=4G cores=4 root-disk=50G"
 applications:
   prometheus:
     series: focal
     charm: prometheus2
     num_units: 1
-    constraints: "arch=amd64 mem=4G cores=4 root-disk=50G"
+    to:
+    - 0
   grafana:
     charm: grafana
     expose: true
     num_units: 1
-    constraints: "arch=amd64 mem=4G cores=4 root-disk=50G"
+    to:
+    - 0
   telegraf:
     charm: telegraf
 relations:
